# snake-game-sdl3

./: AGENTS.md  CMakeLists.txt  README.md
include/: Entity.hpp  Food.hpp  Game.hpp  Grid.hpp  Snake.hpp  Vector2.hpp
src/: Entity.cpp  Food.cpp  Game.cpp  Grid.cpp  Snake.cpp  Vector2.cpp  main.cpp
